Name:                org-citeproc
Version:             0.1
Synopsis:            Command-line interface to pandoc-citeproc
Description:         org-citeproc is a standalone program that uses the
                     pandoc-citeproc library to generate citations and
                     a bibliography, given a database of bibliographic
                     references and a CSL stylesheet.  The idea is to
                     make it possible for Org mode to process
                     citations using this tool.
Homepage:            https://github.com/wyleyr/org-citeproc
License:             BSD3
License-file:        LICENSE
Author:              Richard Lawrence
Maintainer:          richard.lawrence@berkeley.edu
Copyright:           Copyright (C) 2011 John MacFarlane, 2015 Richard Lawrence
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.2

Executable org-citeproc
  Main-is:          org-citeproc.hs
  Build-depends:    base, containers, json, pandoc-citeproc, pandoc-types, pandoc
